correcting padding on mobile view of form

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -365,7 +365,7 @@ summary {
   background-position: 100%;
   flex-grow: 1;
   margin: auto;
-  padding-top:130px;
+  padding-top:120px;
   border:#cfc0ce 2px solid;
 }
 
